# tabienrod-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RESEARCH.md  alembic.ini  crontab  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.jsonc
alembic/: env.py
alembic/versions/: 0b817a2bfcec_use_timezone_aware_timestamps.py  8657e8420c51_initial_schema.py
app/: config.py  constants.py  cron.py  email_service.py  main.py  routes.py  s3.py  schemas.py  scraper.py
scripts/: run_cron.py  save_pdf_to_s3.py
src/app/: config.py  constants.py  cron.py  database.py  email_service.py  models.py  schemas.py  scraper.py
templates/: confirmation.html  notification.html
