[project]
name = "tabienrod-backend"
version = "0.1.0"
description = "DLT vehicle registration plate reservation monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "alembic>=1.14",
    "pymupdf>=1.25",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
